Bug 453775 - [Refactor Bit edit] Bit edit flickers on resize
Summary: [Refactor Bit edit] Bit edit flickers on resize
Status: RESOLVED FIXED
Alias: None
Product: kcalc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Gabriel Barrantes
URL:
Keywords:
: 467155 472344 493967 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-14 11:43 UTC by Nagy Tibor
Modified: 2024-11-11 22:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen capture (471.72 KB, video/mp4)
2022-05-14 11:43 UTC, Nagy Tibor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nagy Tibor 2022-05-14 11:43:36 UTC
Created attachment 148824 [details]
Screen capture

SUMMARY
When resizing KCalc's window the bit edit component of the numeral system mode flickers.

STEPS TO REPRODUCE
1. Choose "Settings"->"Numeral System Mode"
2. Enable "Settings"->"Show Bit Edit"
3. Resize the window

OBSERVED RESULT
See attachment.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.24
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Graphics Platform: X11
Graphics Processor: NVIDIA GeForce 920M/PCIe/SSE2
Comment 1 Gabriel Barrantes 2024-09-07 22:28:30 UTC
Bit edit needs a refactoring.
Comment 2 Gabriel Barrantes 2024-09-07 22:46:10 UTC
*** Bug 467155 has been marked as a duplicate of this bug. ***
Comment 3 Gabriel Barrantes 2024-09-07 22:55:04 UTC
*** Bug 472344 has been marked as a duplicate of this bug. ***
Comment 4 Gabriel Barrantes 2024-10-02 23:25:13 UTC
*** Bug 493967 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2024-10-08 09:42:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kcalc/-/merge_requests/160
Comment 6 Gabriel Barrantes 2024-11-11 22:05:29 UTC
Closed per https://invent.kde.org/utilities/kcalc/-/merge_requests/160 (Tomasz Bojczuk authored)