Bits frame: fixed flickering during resize

Removing main culprit - calling resize(0, 0) required changes in bit-set-frame resizeing.  
Added public method to calculate max frame size invoked always when KCalc window is resized.  

BUG: 453775  
BUG: 467155